--- a/css/style.css
+++ b/css/style.css
@@ -261,3 +261,213 @@ body {
 
     margin-top: 19px;
 }
+
+
+
+
+
+
+
+.third_section {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--color-light-grey);
+}
+
+.section_box {
+    background-color: var(--color-white);
+    height: 370px;
+    width:1124px;
+    display: flex;
+    flex-direction: row;
+}
+
+.section_box h2 {
+
+    font-family: var(--primary-fonts);
+    color: var(--color-black);
+    font-size: 36px;
+    line-height: 42px;
+}
+
+.section_box p {
+    font-family: var(--primary-fonts);
+    color: var(--color-black);
+    font-size: 16px;
+    line-height: 22px;
+
+    margin-top: 30px;
+    margin-bottom: 50px
+}
+
+
+
+
+.third_section_first_box {
+    margin-top: 105px;
+    margin-bottom: 37px;
+    position:relative;
+
+    display: flex;
+    flex-direction: row;
+}
+
+
+.third_section_second_box {
+    margin-bottom: 37px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: relative;
+}
+
+
+
+
+
+.first_box_A {
+    margin-top:91px;
+    margin-left: 36px;
+
+}
+
+
+
+.first_box_A p {
+    font-family: var(--primary-fonts);
+    color: var(--color-black);
+    font-size: 16px;
+    line-height: 22px;
+    width: 416px;
+
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+
+.first_box_A hr {
+    background-color: var(--color-redish);
+    height: 4px;
+    width: 328px;
+    border-style: none;
+}
+
+.first_box_B img {
+    scale: 50%;
+    position:absolute;
+    z-index:2;
+
+    left: 500px;
+}
+
+.first_box_B::after {
+    content: "";
+    width: 150px;
+    height: 150px;
+    border-radius: 41px;
+    background-color: var(--color-redish);
+    transform: matrix(0.71, 0.71, -0.71, 0.71, 0, 0);
+    position:absolute;
+    translate:  480px 70px;
+    z-index: 1;
+}
+
+.second_box_A img {
+    scale: 50%;
+    position:relative;
+    top: -120px;
+    right: 110px;
+    z-index:2;
+}
+
+.second_box_A::after {
+    content: "";
+    width: 320px;
+    height: 320px;
+    border-radius: 50%;
+    background-color: var(--primary-color);
+    position:absolute;
+    translate: 100px -630px;
+    z-index: 1;
+}
+
+.second_box_A {
+   width: 60%;
+}
+
+.second_box_B {
+
+    margin-right: 36px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+
+
+
+
+    padding-top:12px;
+    padding-bottom: 13px;
+}
+
+.second_box_B hr {
+    background-color: var(--primary-color);
+    height: 4px;
+    width: 328px;
+    border-style: none;
+}
+
+
+
+
+.third_section_third_box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: var(--color-light-grey);
+}
+
+
+
+
+.third_box_A {
+    padding-left: 35px;
+    padding-top:69.33px;
+    margin-right:60px;
+
+    width:623px;
+
+    background-color: var(--color-white);
+}
+
+.third_box_A h2 {
+   width: 348px;
+}
+
+.third_box_A p{
+ width: 553px;
+}
+
+.third_box_A hr {
+    background-color: var(--color-green);
+    height: 4px;
+    width: 328px;
+    border-style: none;
+}
+
+
+.third_box_B {
+    display: flex;
+    justify-content: center;
+    align-items: center ;
+
+    width: 440px;
+    background-color: var(--color-green);
+}
+
+.third_box_B img {
+    scale: 50%;
+    position: relative;
+    top:40px;
+}
+
