Best-shop sass rwd

--- a/scss/elements/_first-section.scss
+++ b/scss/elements/_first-section.scss
@@ -2,7 +2,10 @@
 
 .first_section {
   @include mobile {
-    height: 100vh;
+    height: 90vh;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
 
 
   }
